<resources>
    <string name="app_name">SalesForce</string>
    <string name="sign_in">Sign In</string>
    <string name="location_name">LocationName</string>
    <string name="outlet_name_in_outlet_activity">Name:</string>
    <string name="outlet_name_out_act">Name:</string>
    <string name="show_cart_btn_in_order_Activity">Show Cart</string>
    <string name="product_id_in_order">ID</string>
    <string name="productname_in_order_activity">ProductName</string>
    <string name="quantity_in_order_activity">0</string>
    <string name="subtotal_in_cart_activity">Subtotal</string>
    <string name="total_price_in_cart_activity">Total Price:</string>
    <string name="proceed_to_checkout_in_cart_acrtvity">Proceed to Checkout</string>
    <string name="product_name_in_cart_activity">Name</string>
    <string name="price_per_unit_in_cart_activity">Price Per Unit</string>
    <string name="product_quantity_in_cart_activity">Quantity</string>
    <string name="product_price_in_cart_activity">0</string>
    <string name="currency_in_cart_activity">Taka</string>
    <string name="Header_Date">Date</string>
    <string name="Header_Amount">Amount</string>
    <string name="total_bill_in_billCollection">Total Bill</string>
    <string name="total_pay_in_billCollection">Total Pay</string>
    <string name="total_due_in_billCollection">Total Due</string>
    <string name="total_bill_showing_billCollection">1000</string>
    <string name="total_pay_showing_billCollection">500</string>
    <string name="total_due_showing_billCollection">500</string>
    <string name="payment_button_in_billCollection">Payment</string>
    <string name="money_in_payment_activity">Paid Amount</string>
    <string name="amount_to_be_paid_hint_in_activty_payment">Amount to be paid</string>
    <string name="total_paid_in_activity_payment">Total Paid:</string>
    <string name="total_due_in_activity_payment">Total Due:</string>
    <string name="outlet_id_in_payment_activity">Outlet ID:</string>
    <string name="outlet_name_in_payment_activity">Outlet Name:</string>
    <string name="outlet_area_in_payment_activity">Outlet Area:</string>
    <string name="make_paymentbtn_in_apyment_activity">Make Payment</string>
    <string name="date_format_in_billView">01-08-17</string>
    <string name="amount_format_in_billView">1000 Taka</string>
    <string name="collect_order_btn_in_option">Collect Order</string>
    <string name="bill_collection_in_option">Bill Collection</string>
    <string name="order_collection_in_option_activity">Order Collection</string>
    <string name="bill_collection_in_option_activity">Bill Collection</string>
    <string name="total_bill_in_payment_activity">Total Bill:</string>
</resources>
