<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.salesforce.gnt.com.salesforce.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_shop_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/shop" />

        <TextView
            android:id="@+id/tv_Outlet_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/outlet_id_in_payment_activity"
            android:textColor="#212121"
            android:textSize="25sp" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#01579B" />


        <TextView
            android:id="@+id/tv_Outlet_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/outlet_name_in_payment_activity"
            android:textColor="#212121"
            android:textSize="25sp" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#01579B" />


        <TextView
            android:id="@+id/tv_Outlet_Area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/outlet_area_in_payment_activity"
            android:textColor="#212121"
            android:textSize="25sp" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#01579B" />

    </LinearLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#01579B" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Due"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/total_due_in_activity_payment"
            android:textColor="#212121"
            android:textSize="25sp" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#01579B" />

        <TextView
            android:id="@+id/tv_Paid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/total_paid_in_activity_payment"
            android:textColor="#212121"
            android:textSize="25sp" />

        <view
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#01579B" />

        <EditText
            android:id="@+id/et_Pay_Money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/amount_to_be_paid_hint_in_activty_payment"
            android:inputType="textPersonName"
            android:text="@string/money_in_payment_activity"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_make_payment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1.3"
        android:background="@color/colorPrimary"
        android:fontFamily="monospace"
        android:text="@string/make_paymentbtn_in_apyment_activity"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold"

        />


</LinearLayout>
