<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.salesforce.gnt.com.salesforce.BillCollection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="3"
            android:text="@string/Header_Date"
            android:textColor="#424242"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Header_Amount"
            android:textColor="#424242"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#000000" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_bill_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="6">


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="3">

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/tv_Total_Bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_bill_in_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/tv_Total_Pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_pay_in_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/tv_due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_due_in_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/tv_bill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/total_bill_showing_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/total_pay_showing_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_Total_Due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/total_due_showing_billCollection"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="25sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_Payment"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2.5"
        android:fontFamily="monospace"
        android:text="@string/payment_button_in_billCollection"
        android:textSize="20sp" />


</LinearLayout>
